--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Моя перша сторінка</h1>
-  <p><a href="homework1/">Завдання 1</a></p>
+  <p><a href="Aframe/">Завдання 1</a></p>
 </body>
 </html>
